@@ -1,5 +1,6 @@
 package io.sqm.parser.core;
 
+import io.sqm.parser.spi.IdentifierQuoting;
 import org.junit.jupiter.api.Test;
 
 import java.util.EnumSet;
@@ -9,6 +10,8 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class LexerTest {
 
+    private final TestIdentifierQuoting quoting = new TestIdentifierQuoting();
+
     private static Token t(List<Token> ts, int i) {
         return ts.get(i);
     }
@@ -16,7 +19,7 @@ class LexerTest {
     @Test
     void ansi_double_quotes_in_function_and_collate() {
         String s = "LOWER(\"T\".\"Name\") NULLS FIRST COLLATE \"de-CH\" DESC";
-        List<Token> toks = Lexer.lexAll(s);
+        List<Token> toks = Lexer.lexAll(s, quoting);
 
         assertEquals(TokenType.IDENT, t(toks, 0).type());  // LOWER
         assertEquals("LOWER", t(toks, 0).lexeme());
@@ -54,7 +57,7 @@ class LexerTest {
     @Test
     void bracketed_identifiers_with_spaces_and_escape() {
         String s = "[dbo].[Order]]Name]";
-        List<Token> toks = Lexer.lexAll(s);
+        List<Token> toks = Lexer.lexAll(s, quoting);
 
         assertEquals(TokenType.IDENT, t(toks, 0).type());  // [dbo] -> dbo
         assertEquals("dbo", t(toks, 0).lexeme());
@@ -70,7 +73,7 @@ class LexerTest {
     @Test
     void backtick_identifiers_with_escape() {
         String s = "`sch`.`ta``ble`";
-        List<Token> toks = Lexer.lexAll(s);
+        List<Token> toks = Lexer.lexAll(s, quoting);
 
         assertEquals(TokenType.IDENT, t(toks, 0).type());  // `sch` -> sch
         assertEquals("sch", t(toks, 0).lexeme());
@@ -86,7 +89,7 @@ class LexerTest {
     @Test
     void mixed_unquoted_and_quoted() {
         String s = "t.\"Select\".[Order] . `when`";
-        List<Token> toks = Lexer.lexAll(s);
+        List<Token> toks = Lexer.lexAll(s, quoting);
 
         assertEquals("t", t(toks, 0).lexeme());
         assertEquals(TokenType.DOT, t(toks, 1).type());
@@ -100,38 +103,31 @@ class LexerTest {
 
     @Test
     void unterminated_quoted_identifiers_throw() {
-        assertThrows(IllegalArgumentException.class, () -> Lexer.lexAll("\"abc"));
-        assertThrows(IllegalArgumentException.class, () -> Lexer.lexAll("[abc"));
-        assertThrows(IllegalArgumentException.class, () -> Lexer.lexAll("`abc"));
+        assertThrows(IllegalArgumentException.class, () -> Lexer.lexAll("\"abc", quoting));
+        assertThrows(IllegalArgumentException.class, () -> Lexer.lexAll("[abc", quoting));
+        assertThrows(IllegalArgumentException.class, () -> Lexer.lexAll("`abc", quoting));
     }
 
     // --- POSITIONAL: $n ----------------------------------------------------
 
     @Test
     void positionalParameterWithoutSpacesIsRecognized() {
-        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = $1 AND b = $12");
+        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = $1 AND b = $12", quoting);
 
-        List<Token> params = filterTokensOfType(tokens, TokenType.PARAM_POS);
+        List<Token> params = filterTokensOfType(tokens, TokenType.DOLLAR);
         assertEquals(2, params.size());
 
-        assertEquals("1", params.get(0).lexeme());   // or value(), adapt to your API
-        assertEquals("12", params.get(1).lexeme());
-    }
-
-    @Test
-    void positionalParameterWithSpacesIsNotRecognized() {
-        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = $ 1");
-
-        // We don't care exactly how '$ 1' is tokenised,
-        // we only assert that no POSITIONAL_PARAM token was produced.
-        assertEquals(0, countTokensOfType(tokens, TokenType.PARAM_POS));
+        assertEquals(TokenType.DOLLAR, tokens.get(7).type());
+        assertEquals("1", tokens.get(8).lexeme());   // or value(), adapt to your API
+        assertEquals(TokenType.DOLLAR, tokens.get(12).type());
+        assertEquals("12", tokens.get(13).lexeme());
     }
 
     // --- QUESTION: ? -------------------------------------------------------
 
     @Test
     void questionMarkParameterIsRecognized() {
-        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = ? AND b = ?");
+        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = ? AND b = ?", quoting);
 
         List<Token> params = filterTokensOfType(tokens, TokenType.QMARK);
         assertEquals(2, params.size());
@@ -143,51 +139,42 @@ class LexerTest {
 
     @Test
     void namedParameterWithColonIsRecognized() {
-        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = :id AND b = :user_name");
+        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = :id AND b = :user_name", quoting);
 
-        List<Token> params = filterTokensOfType(tokens, TokenType.PARAM_NAMED);
+        List<Token> params = filterTokensOfType(tokens, TokenType.COLON);
         assertEquals(2, params.size());
 
-        assertEquals("id", params.get(0).lexeme());
-        assertEquals("user_name", params.get(1).lexeme());
-    }
-
-    @Test
-    void namedParameterWithColonAndSpaceIsNotRecognized() {
-        assertThrows(ParserException.class, () -> Lexer.lexAll("SELECT * FROM t WHERE a = : id"));
+        assertEquals(TokenType.COLON, tokens.get(7).type());
+        assertEquals("id", tokens.get(8).lexeme());
+        assertEquals(TokenType.COLON, tokens.get(12).type());
+        assertEquals("user_name", tokens.get(13).lexeme());
     }
 
     // --- NAMED: @name  (user var vs param – lexer just recognises the shape) ---
 
     @Test
-    void namedParameterWithAtIsRecognizedByCoreLexer() {
-        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = @id AND b = @user_name");
-
-        List<Token> params = filterTokensOfType(tokens, TokenType.PARAM_NAMED);
-        assertEquals(2, params.size());
-
-        assertEquals("id", params.get(0).lexeme());
-        assertEquals("user_name", params.get(1).lexeme());
+    void namedParameterWithAtIsNotRecognizedByCoreLexer() {
+        assertThrows(ParserException.class, () -> Lexer.lexAll("SELECT * FROM t WHERE a = @id AND b = @user_name", quoting));
     }
 
     @Test
     void atFollowedByDigitIsNotRecognizedAsNamedParameter() {
         // Pattern for named params is @[A-Za-z_][A-Za-z0-9_]*
-        assertThrows(ParserException.class, () -> Lexer.lexAll("SELECT * FROM t WHERE a = @1"));
+        assertThrows(ParserException.class, () -> Lexer.lexAll("SELECT * FROM t WHERE a = @1", quoting));
     }
 
     // --- Mixed styles sanity test ------------------------------------------
 
     @Test
     void mixedParameterStylesAreLexedCorrectly() {
-        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = $1 AND b = :name AND c = ? AND d = @id");
+        List<Token> tokens = Lexer.lexAll("SELECT * FROM t WHERE a = $1 AND b = :name AND c = ?", quoting);
 
-        long positional = countTokensOfType(tokens, TokenType.PARAM_POS);
-        long named = countTokensOfType(tokens, TokenType.PARAM_NAMED);
+        long positional = countTokensOfType(tokens, TokenType.DOLLAR);
+        long named = countTokensOfType(tokens, TokenType.COLON);
         long question = countTokensOfType(tokens, TokenType.QMARK);
 
         assertEquals(1, positional);
-        assertEquals(2, named);       // :name, @id
+        assertEquals(1, named);       // :name
         assertEquals(1, question);
     }
 
@@ -195,11 +182,11 @@ class LexerTest {
 
     @Test
     void plainIdentifiersDoNotProduceParameterTokens() {
-        List<Token> tokens = Lexer.lexAll("SELECT price, total, name FROM test");
+        List<Token> tokens = Lexer.lexAll("SELECT price, total, name FROM test", quoting);
 
         EnumSet<TokenType> paramTypes = EnumSet.of(
-            TokenType.PARAM_POS,
-            TokenType.PARAM_NAMED,
+            TokenType.DOLLAR,
+            TokenType.COLON,
             TokenType.QMARK
         );
 
@@ -222,21 +209,21 @@ class LexerTest {
 
     @Test
     void lexer_handlesEmptyString() {
-        List<Token> tokens = Lexer.lexAll("");
+        List<Token> tokens = Lexer.lexAll("", quoting);
         assertEquals(1, tokens.size());
-        assertEquals(TokenType.EOF, tokens.get(0).type());
+        assertEquals(TokenType.EOF, tokens.getFirst().type());
     }
 
     @Test
     void lexer_handlesWhitespaceOnly() {
-        List<Token> tokens = Lexer.lexAll("   \t\n  ");
+        List<Token> tokens = Lexer.lexAll("   \t\n  ", quoting);
         assertEquals(1, tokens.size());
-        assertEquals(TokenType.EOF, tokens.get(0).type());
+        assertEquals(TokenType.EOF, tokens.getFirst().type());
     }
 
     @Test
     void lexer_handlesLineComments() {
-        List<Token> tokens = Lexer.lexAll("SELECT -- this is a comment\n * FROM t");
+        List<Token> tokens = Lexer.lexAll("SELECT -- this is a comment\n * FROM t", quoting);
         assertEquals(TokenType.SELECT, tokens.get(0).type());
         assertEquals(TokenType.OPERATOR, tokens.get(1).type()); // *
         assertEquals(TokenType.FROM, tokens.get(2).type());
@@ -244,7 +231,7 @@ class LexerTest {
 
     @Test
     void lexer_handlesBlockComments() {
-        List<Token> tokens = Lexer.lexAll("SELECT /* comment */ * FROM t");
+        List<Token> tokens = Lexer.lexAll("SELECT /* comment */ * FROM t", quoting);
         assertEquals(TokenType.SELECT, tokens.get(0).type());
         assertEquals(TokenType.OPERATOR, tokens.get(1).type()); // *
         assertEquals(TokenType.FROM, tokens.get(2).type());
@@ -252,38 +239,38 @@ class LexerTest {
 
     @Test
     void lexer_throwsOnUnterminatedBlockComment() {
-        assertThrows(ParserException.class, () -> Lexer.lexAll("SELECT /* unterminated"));
+        assertThrows(ParserException.class, () -> Lexer.lexAll("SELECT /* unterminated", quoting));
     }
 
     @Test
     void lexer_handlesMultilineBlockComment() {
-        List<Token> tokens = Lexer.lexAll("SELECT /*\n multi\n line\n comment\n*/ * FROM t");
+        List<Token> tokens = Lexer.lexAll("SELECT /*\n multi\n line\n comment\n*/ * FROM t", quoting);
         assertEquals(TokenType.SELECT, tokens.get(0).type());
         assertEquals(TokenType.OPERATOR, tokens.get(1).type());
     }
 
     @Test
     void lexer_handlesStringLiteralsWithEscapes() {
-        List<Token> tokens = Lexer.lexAll("'hello''world'");
+        List<Token> tokens = Lexer.lexAll("'hello''world'", quoting);
         assertEquals(1, countTokensOfType(tokens, TokenType.STRING));
-        assertEquals("hello'world", tokens.get(0).lexeme());
+        assertEquals("hello'world", tokens.getFirst().lexeme());
     }
 
     @Test
     void lexer_handlesEmptyStringLiteral() {
-        List<Token> tokens = Lexer.lexAll("''");
+        List<Token> tokens = Lexer.lexAll("''", quoting);
         assertEquals(1, countTokensOfType(tokens, TokenType.STRING));
-        assertEquals("", tokens.get(0).lexeme());
+        assertEquals("", tokens.getFirst().lexeme());
     }
 
     @Test
     void lexer_throwsOnUnterminatedString() {
-        assertThrows(ParserException.class, () -> Lexer.lexAll("'unterminated"));
+        assertThrows(ParserException.class, () -> Lexer.lexAll("'unterminated", quoting));
     }
 
     @Test
     void lexer_handlesIntegerNumbers() {
-        List<Token> tokens = Lexer.lexAll("42 100 0");
+        List<Token> tokens = Lexer.lexAll("42 100 0", quoting);
         assertEquals(3, countTokensOfType(tokens, TokenType.NUMBER));
         assertEquals("42", tokens.get(0).lexeme());
         assertEquals("100", tokens.get(1).lexeme());
@@ -292,14 +279,14 @@ class LexerTest {
 
     @Test
     void lexer_handlesDecimalNumbers() {
-        List<Token> tokens = Lexer.lexAll("3.14 0.5 .5 5.");
+        List<Token> tokens = Lexer.lexAll("3.14 0.5 .5 5.", quoting);
         assertEquals(4, countTokensOfType(tokens, TokenType.NUMBER));
-        assertEquals("3.14", tokens.get(0).lexeme());
+        assertEquals("3.14", tokens.getFirst().lexeme());
     }
 
     @Test
     void lexer_handlesScientificNotation() {
-        List<Token> tokens = Lexer.lexAll("1e10 2.5E-3 3.0e+5");
+        List<Token> tokens = Lexer.lexAll("1e10 2.5E-3 3.0e+5", quoting);
         assertEquals(3, countTokensOfType(tokens, TokenType.NUMBER));
         assertEquals("1e10", tokens.get(0).lexeme());
         assertEquals("2.5E-3", tokens.get(1).lexeme());
@@ -308,7 +295,7 @@ class LexerTest {
 
     @Test
     void lexer_handlesAllArithmeticOperators() {
-        List<Token> tokens = Lexer.lexAll("+ - * / %");
+        List<Token> tokens = Lexer.lexAll("+ - * / %", quoting);
         assertEquals(5, countTokensOfType(tokens, TokenType.OPERATOR));
         assertEquals("+", tokens.get(0).lexeme());
         assertEquals("-", tokens.get(1).lexeme());
@@ -319,7 +306,7 @@ class LexerTest {
 
     @Test
     void lexer_handlesAllComparisonOperators() {
-        List<Token> tokens = Lexer.lexAll("= <> != < <= > >=");
+        List<Token> tokens = Lexer.lexAll("= <> != < <= > >=", quoting);
         assertEquals(7, countTokensOfType(tokens, TokenType.OPERATOR));
         assertEquals("=", tokens.get(0).lexeme());
         assertEquals("<>", tokens.get(1).lexeme());
@@ -332,7 +319,7 @@ class LexerTest {
 
     @Test
     void lexer_handlesJsonOperators() {
-        List<Token> tokens = Lexer.lexAll("-> ->> #> #>>");
+        List<Token> tokens = Lexer.lexAll("-> ->> #> #>>", quoting);
         assertEquals(4, countTokensOfType(tokens, TokenType.OPERATOR));
         assertEquals("->", tokens.get(0).lexeme());
         assertEquals("->>", tokens.get(1).lexeme());
@@ -342,7 +329,7 @@ class LexerTest {
 
     @Test
     void lexer_handlesContainmentOperators() {
-        List<Token> tokens = Lexer.lexAll("@> <@");
+        List<Token> tokens = Lexer.lexAll("@> <@", quoting);
         assertEquals(2, countTokensOfType(tokens, TokenType.OPERATOR));
         assertEquals("@>", tokens.get(0).lexeme());
         assertEquals("<@", tokens.get(1).lexeme());
@@ -350,21 +337,21 @@ class LexerTest {
 
     @Test
     void lexer_handlesConcatenationOperator() {
-        List<Token> tokens = Lexer.lexAll("||");
+        List<Token> tokens = Lexer.lexAll("||", quoting);
         assertEquals(1, countTokensOfType(tokens, TokenType.OPERATOR));
-        assertEquals("||", tokens.get(0).lexeme());
+        assertEquals("||", tokens.getFirst().lexeme());
     }
 
     @Test
     void lexer_handlesArrayOverlapOperator() {
-        List<Token> tokens = Lexer.lexAll("&&");
+        List<Token> tokens = Lexer.lexAll("&&", quoting);
         assertEquals(1, countTokensOfType(tokens, TokenType.OPERATOR));
-        assertEquals("&&", tokens.get(0).lexeme());
+        assertEquals("&&", tokens.getFirst().lexeme());
     }
 
     @Test
     void lexer_handlesRegexOperators() {
-        List<Token> tokens = Lexer.lexAll("~ ~* !~ !~*");
+        List<Token> tokens = Lexer.lexAll("~ ~* !~ !~*", quoting);
         assertEquals(4, countTokensOfType(tokens, TokenType.OPERATOR));
         assertEquals("~", tokens.get(0).lexeme());
         assertEquals("~*", tokens.get(1).lexeme());
@@ -374,7 +361,7 @@ class LexerTest {
 
     @Test
     void lexer_handlesPunctuation() {
-        List<Token> tokens = Lexer.lexAll("( ) , .");
+        List<Token> tokens = Lexer.lexAll("( ) , .", quoting);
         assertEquals(TokenType.LPAREN, tokens.get(0).type());
         assertEquals(TokenType.RPAREN, tokens.get(1).type());
         assertEquals(TokenType.COMMA, tokens.get(2).type());
@@ -384,13 +371,13 @@ class LexerTest {
     @Test
     void lexer_recognizesAllKeywords() {
         String keywords = "SELECT FROM WHERE GROUP BY HAVING ORDER LIMIT OFFSET " +
-                         "JOIN INNER LEFT RIGHT FULL OUTER CROSS NATURAL ON USING " +
-                         "AND OR NOT IN LIKE BETWEEN IS NULL TRUE FALSE " +
-                         "CASE WHEN THEN ELSE END DISTINCT EXISTS AS " +
-                         "UNION INTERSECT EXCEPT ALL ANY " +
-                         "CAST ARRAY FILTER OVER PARTITION WINDOW";
-        List<Token> tokens = Lexer.lexAll(keywords);
-        
+            "JOIN INNER LEFT RIGHT FULL OUTER CROSS NATURAL ON USING " +
+            "AND OR NOT IN LIKE BETWEEN IS NULL TRUE FALSE " +
+            "CASE WHEN THEN ELSE END DISTINCT EXISTS AS " +
+            "UNION INTERSECT EXCEPT ALL ANY " +
+            "CAST ARRAY FILTER OVER PARTITION WINDOW";
+        List<Token> tokens = Lexer.lexAll(keywords, quoting);
+
         // All should be recognized as keywords, not identifiers
         long keywordCount = tokens.stream()
             .filter(t -> t.type() != TokenType.IDENT && t.type() != TokenType.EOF)
@@ -400,21 +387,22 @@ class LexerTest {
 
     @Test
     void lexer_handlesIdentifiersWithUnderscoreAndDollar() {
-        List<Token> tokens = Lexer.lexAll("_id $price user_name $1dollar");
+        List<Token> tokens = Lexer.lexAll("_id $price user_name $1dollar", quoting);
         assertEquals(TokenType.IDENT, tokens.get(0).type());
         assertEquals("_id", tokens.get(0).lexeme());
-        assertEquals(TokenType.IDENT, tokens.get(1).type());
-        assertEquals("$price", tokens.get(1).lexeme());
+        assertEquals(TokenType.DOLLAR, tokens.get(1).type());
+        assertEquals(TokenType.IDENT, tokens.get(2).type());
+        assertEquals("price", tokens.get(2).lexeme());
     }
 
     @Test
     void lexer_throwsOnUnexpectedCharacter() {
-        assertThrows(ParserException.class, () -> Lexer.lexAll("SELECT \u00A7")); // § character
+        assertThrows(ParserException.class, () -> Lexer.lexAll("SELECT §", quoting)); // § character
     }
 
     @Test
     void lexer_handlesQuestionMarkJsonOperators() {
-        List<Token> tokens = Lexer.lexAll("?| ?&");
+        List<Token> tokens = Lexer.lexAll("?| ?&", quoting);
         assertEquals(2, countTokensOfType(tokens, TokenType.OPERATOR));
         assertEquals("?|", tokens.get(0).lexeme());
         assertEquals("?&", tokens.get(1).lexeme());
@@ -422,7 +410,7 @@ class LexerTest {
 
     @Test
     void lexer_distinguishesQuestionMarkVsJsonOperator() {
-        List<Token> tokens = Lexer.lexAll("? ?| ?&");
+        List<Token> tokens = Lexer.lexAll("? ?| ?&", quoting);
         assertEquals(TokenType.QMARK, tokens.get(0).type());
         assertEquals(TokenType.OPERATOR, tokens.get(1).type());
         assertEquals("?|", tokens.get(1).lexeme());
@@ -432,7 +420,7 @@ class LexerTest {
 
     @Test
     void lexer_handlesCaretOperator() {
-        List<Token> tokens = Lexer.lexAll("2 ^ 3");
+        List<Token> tokens = Lexer.lexAll("2 ^ 3", quoting);
         assertEquals(TokenType.NUMBER, tokens.get(0).type());
         assertEquals(TokenType.OPERATOR, tokens.get(1).type());
         assertEquals("^", tokens.get(1).lexeme());
@@ -442,10 +430,10 @@ class LexerTest {
     @Test
     void lexer_handlesComplexQuery() {
         String sql = "SELECT t.id, t.name FROM users t WHERE t.age >= 18 AND t.status = 'active'";
-        List<Token> tokens = Lexer.lexAll(sql);
-        
+        List<Token> tokens = Lexer.lexAll(sql, quoting);
+
         assertTrue(tokens.size() > 10);
-        assertEquals(TokenType.SELECT, tokens.get(0).type());
+        assertEquals(TokenType.SELECT, tokens.getFirst().type());
         assertNotNull(tokens.stream().filter(t -> t.type() == TokenType.FROM).findFirst().orElse(null));
         assertNotNull(tokens.stream().filter(t -> t.type() == TokenType.WHERE).findFirst().orElse(null));
     }
@@ -453,8 +441,8 @@ class LexerTest {
     @Test
     void lexer_preservesTokenPositions() {
         String sql = "SELECT * FROM";
-        List<Token> tokens = Lexer.lexAll(sql);
-        
+        List<Token> tokens = Lexer.lexAll(sql, quoting);
+
         assertEquals(0, tokens.get(0).pos()); // SELECT at position 0
         assertTrue(tokens.get(1).pos() > 0);   // * somewhere after SELECT
         assertTrue(tokens.get(2).pos() > tokens.get(1).pos()); // FROM after *
@@ -463,7 +451,7 @@ class LexerTest {
     @Test
     void lexer_handlesConsecutiveOperators() {
         // Test that operators are lexed correctly when adjacent
-        List<Token> tokens = Lexer.lexAll("a<>b");
+        List<Token> tokens = Lexer.lexAll("a<>b", quoting);
         assertEquals(TokenType.IDENT, tokens.get(0).type());
         assertEquals(TokenType.OPERATOR, tokens.get(1).type());
         assertEquals("<>", tokens.get(1).lexeme());
@@ -472,17 +460,31 @@ class LexerTest {
 
     @Test
     void lexer_dollarSignAloneIsIdentifier() {
-        // $ alone (not followed by digit or letter) should be treated as identifier start
-        List<Token> tokens = Lexer.lexAll("$price");
-        assertEquals(TokenType.IDENT, tokens.get(0).type());
-        assertEquals("$price", tokens.get(0).lexeme());
+        List<Token> tokens = Lexer.lexAll("$price", quoting);
+        assertEquals(TokenType.DOLLAR, tokens.getFirst().type());
+        assertEquals(TokenType.IDENT, tokens.get(1).type());
+        assertEquals("price", tokens.get(1).lexeme());
     }
 
     @Test
     void lexer_handlesMixedCaseKeywords() {
-        List<Token> tokens = Lexer.lexAll("SeLeCt FrOm WhErE");
+        List<Token> tokens = Lexer.lexAll("SeLeCt FrOm WhErE", quoting);
         assertEquals(TokenType.SELECT, tokens.get(0).type());
         assertEquals(TokenType.FROM, tokens.get(1).type());
         assertEquals(TokenType.WHERE, tokens.get(2).type());
+    }
+
+    private static class TestIdentifierQuoting implements IdentifierQuoting {
+        /**
+         * Checks whether the given character can start a quoted identifier.
+         *
+         * @param ch a character from the input stream.
+         * @return {@code true} if the character is a supported opening
+         * quoting character, {@code false} otherwise.
+         */
+        @Override
+        public boolean supports(char ch) {
+            return ch == '"' || ch == '`' || ch == '[';
+        }
     }
 }
